Fix mobile header alignment

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -4,6 +4,7 @@
   box-shadow: 0 1px 4px 0 rgba($color-black, 0.12);
   font-weight: map-get($font-weight, bold);
   padding: 20px;
+  padding-bottom: 10px;
   z-index: 10;
 
   @media #{$bp-tablet-up} {
